k8s/consumer.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consumer-v3
spec:
  replicas: 1 # 消费者通常 1 个就够，除非你想测试并行写性能
  selector:
    matchLabels:
      app: consumer-v3
  template:
    metadata:
      labels:
        app: consumer-v3
    spec:
      containers:
      - name: consumer-v3
        image: chat-consumer:latest # 本机编译后的镜像名
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /health # 注意：consumer 这里的路径映射可能也需要检查，通常 Spring Boot 是 /actuator/health
            port: 8081
          initialDelaySeconds: 30
        readinessProbe:
          httpGet:
            path: /health
            port: 8081
          initialDelaySeconds: 15
